# earning-calls

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  analysis_results.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
configs/: text_config.yaml
data/processed/: call_manifest.csv  unmapped_calls.txt
outputs/archive/early_20calls/: baseline_price_results.json  signal_4483296.json
outputs/archive/text_only_200calls/: backtest_results.json  baseline_comparison.json  feature_importance.json  (+4 more)
outputs/evaluation/: backtest_summary.json  model_predictions.parquet
outputs/text_only/: equity_curve.parquet  results.json
scripts/: _download_spy.py  download_earnings22.py  download_fincall.py  download_market_data.py  download_transcripts.py  extract_all_text_features.py  get_real_targets.py  run_comparison.py  run_full_pipeline.py  visualize_comparison.py  visualize_results.py
src/dashboard/: app.py
src/evaluation/: backtesting.py
src/features/: audio_assembler.py  audio_opensmile.py  audio_prosody.py  audio_quality.py  audio_wav2vec2.py  audio_whisper.py  dataset_split.py  divergence.py  interaction_assembler.py  multimodal_join.py  qa_pressure.py  sentiment_delta.py  structural_features.py  text_assembler.py  text_earnings22.py  text_sentiment.py  text_specificity.py  text_uncertainty.py
src/inference/: pipeline.py
src/modeling/: baseline_comparison.py  baseline_price.py  fusion_model.py  train_fusion.py  train_lightgbm.py
src/preprocessing/: db.py  segmentation.py  speaker_classification.py  transcript_ingest.py
